crates/java-syntax/tests/snapshots/parser__parse_missing_semicolon.snap
---
source: crates/java-syntax/tests/parser.rs
expression: actual
---
ROOT
  CLASS_DECL
    MODIFIER_LIST
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        MODIFIER_LIST
        TYPE
          WHITESPACE " "
          INT_KW "int"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "x"
      WHITESPACE " "
      R_BRACE "}"
errors:
  ParseError { kind: ExpectedToken { expected: [SEMICOLON], found: Some(R_BRACE) }, pos: 5 }
