crates/java-syntax/tests/snapshots/parser__parse_nested_wildcard_type_argument.snap
---
source: crates/java-syntax/tests/parser.rs
expression: actual
---
ROOT
  CLASS_DECL
    MODIFIER_LIST
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        MODIFIER_LIST
        TYPE
          WHITESPACE " "
          IDENTIFIER "Map"
          TYPE_ARGUMENTS
            LESS "<"
            TYPE_ARGUMENT
              TYPE
                IDENTIFIER "String"
            COMMA ","
            TYPE_ARGUMENT
              TYPE
                WHITESPACE " "
                IDENTIFIER "List"
                TYPE_ARGUMENTS
                  LESS "<"
                  TYPE_ARGUMENT
                    WILDCARD_TYPE
                      QUESTION "?"
                      WILDCARD_BOUNDS
                        WHITESPACE " "
                        EXTENDS_KW "extends"
                        TYPE
                          WHITESPACE " "
                          IDENTIFIER "Number"
                  GREATER ">"
            GREATER ">"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "xs"
        SEMICOLON ";"
      WHITESPACE " "
      R_BRACE "}"
